--- a/CSS/display/block.html
+++ b/CSS/display/block.html
@@ -15,5 +15,11 @@
 		<li class="ex-item ex-two">Segundo</li>
 		<li class="ex-item ex-three">Terceiro</li>
 	</ul>
+
+	<section id="exe">
+		<div class="box box-1">Primeiro</div>
+		<div class="box box-2">Segundo</div>
+		<div class="box box-3">Terceiro</div>
+	</section>
 </body>
 </html>
