--- a/CSS/display/inline-block.html
+++ b/CSS/display/inline-block.html
@@ -14,5 +14,10 @@
 		<li class="ultima-linha"></li>
 	</ul>
 
+	<section id="exe">
+		<div class="box box-1">Primeiro</div>
+		<div class="box box-2">Segundo</div>
+		<div class="box box-3">Terceiro</div>
+	</section>
 </body>
 </html>
