--- a/CSS/display/inline.html
+++ b/CSS/display/inline.html
@@ -16,5 +16,11 @@
 		<li class="example-item ex-three">Terceiro</li>
 	</ul>
 
+	<section id="exe">
+		<div class="box box-1">Primeiro</div>
+		<div class="box box-2">Segundo</div>
+		<div class="box box-3">Terceiro</div>
+	</section>
+
 </body>
 </html>
