--- a/CSS/display/inline-block.html
+++ b/CSS/display/inline-block.html
@@ -11,7 +11,7 @@
 		<li class="ex-item ex-one">Primeiro</li>
 		<li class="ex-item ex-two">Segundo</li>
 		<li class="ex-item ex-three">Terceiro</li>
-		<li class="ultima-linha"></li>
+		<li class="ex-item ultima-linha"></li>
 	</ul>
 
 	<section id="exe">
