--- a/CSS/position/absolute.html
+++ b/CSS/position/absolute.html
@@ -15,7 +15,7 @@
 		Div dois
 	</div>
 
-	<div class="ex ex-3">
+	<div class="ex ex-3">div três
 		<div class="ex-interno">Interna</div>
 	</div>
 </body>
